<resources>
    <string name="app_name">ListenNow</string>
    <string name="access">Access</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="save_credentials">Save credentials</string>
    <string name="register">Register</string>
    <string name="register_here">Register Here</string>
    <string name="access_here">Access Here</string>
    <string name="password_required">Password is required</string>
    <string name="repeat_password_required">Repeat the password is required</string>
    <string name="email_required">Email is Required</string>
    <string name="invalid_email">Invalid email, verify if exists @ or .com</string>
    <string name="passwords_are_not_the_same">The passwords are not the same</string>
    <string name="email_already_in_use">Email is already in use</string>
    <string name="registration_successful_login">Registration successful, do your login</string>
    <string name="select_songs">Select Songs</string>
    <string name="song_already_add">Song Already Add</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="search">Search</string>
    <string name="sync">Sync</string>
    <string name="invalid_email_password">Invalid email or password</string>
    <string name="download_started">Download Started</string>
    <string name="download_failed">Download Failed, try again...</string>
    <string name="remove">Remove</string>
    <string name="remove_song">Remove Song</string>
    <string name="song_details">Song Details</string>
    <string name="exit">Exit</string>
    <string name="profile">Profile</string>
    <string name="id">User Id</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="home">Home</string>
    <string name="search_new_songs">New Songs</string>
    <string name="title_artist_album">Search for song name or artist</string>
    <string name="playlists">Playlists</string>
    <string name="new_playlist">New Playlist</string>
    <string name="save_playlist">Save Playlist</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_home">Playlist Home</string>
    <string name="select_playlist_songs">Select Playlist Songs</string>
    <string name="save_songs">Save Songs</string>
    <string name="not_results_found_try_start_searching_something">No results found, try search for something</string>
    <string name="not_results_found_try_download_a_new_song">No songs found, try to download a new song</string>
    <string name="find_a_new_song">Find a New Song</string>
    <string name="download_resquest_has_started">Download has started successfully</string>
    <string name="download_completed">Download Completed Successfully!</string>
    <string name="fragment_error_somethint_went_wrong_title">Something went wrong</string>
    <string name="fragment_error_retry">Try again</string>
    <string name="fragment_error_title">Erro Screen</string>
    <string name="message_error_creating_user">We apologize for the inconvenience. A problem occurred while creating your device ID on our servers. Please check your internet connection and try again.</string>
    <string name="message_failed_to_save_user">Failed to save device ID</string>
    <string name="fragment_device_infos_your_id">Your Device ID</string>
    <string name="fragment_device_infos_title">Device Infos</string>
    <string name="copied_text">Copied Text</string>
    <string name="fragment_device_infos_id_copied_successfully">Device ID copied!</string>
    <string name="app_version">App Version: %s</string>
    <string name="fragment_device_infos_use_cause_for_id_message">You can use your device ID to listen your songs in another device.</string>
    <string name="fragment_device_infos_device_id_to_download_songs">Device ID to Download Songs/Playlists</string>
    <string name="importing_all_songs_from_another_device">The import has started, you can check the notifications to follow the progress.</string>
    <string name="importing_songs_from_another_device">Songs left to import %d</string>
    <string name="importing_songs">Importing Songs</string>
    <string name="fragment_device_infos_device_id_must_not_be_null">Device ID must not be empty, specify the device id that you want to download songs</string>
    <string name="fragment_Device_infos_device_id_must_be_different_than_yours">The device ID must be different than yours</string>
    <string name="message_it_was_not_possible_to_execute_this_action">It was not possible to execute this action, please verify your internet connection</string>
    <string name="attention">Attention</string>
    <string name="dialog_download_songs_title">Are you sure?</string>
    <string name="dialog_download_songs_message">We found %d songs and %d playlists to download, you want to proceed the download?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fragment_device_infos_no_songs_found_to_download_with_id">No new songs/playlists found for the provided ID.</string>
    <string name="song_player_notification">Song Player on Notification Bar</string>
    <string name="import_all_songs_from_another_device">Import All Songs From Another Device Notification</string>
    <string name="download_started_notification">Download Started Notification</string>
    <string name="next">Next</string>
    <string name="stop">Stop</string>
    <string name="dialog_new_version_available_title">New Version Available</string>
    <string name="dialog_new_version_available_message">A new version of ListenNow is now Available!\n\nInstalled Version: %s\nLatest Version: %s\n\nDo you want to update now?</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="download_new_version_apk">Download ListenNow %s</string>
    <string name="new_version_is_being_donwloaded">ListenNow update is being downloaded</string>
    <string name="albums">Albums</string>
    <string name="album_songs">Album Songs</string>
    <string name="cd_empty_state_people_looking_for_something">A wowen looking for something</string>
    <string name="albums_no_albums_found_empty_state">No Albums found</string>
    <string name="albums_search_bar_hint">Search for album or artist name</string>
    <string name="albums_see_playlists">See Playlists</string>
    <string name="playlists_new_playlist">New Playlist</string>
    <string name="playlists_search_bar_hint">Search for playlist name</string>
    <string name="albums_no_playlists_found_empty_state">No playlists found</string>
    <string name="playlists_title">Playlists</string>
    <string name="playlists_new_playlist_title">Title</string>
    <string name="playlists_new_playlist_save">Save</string>
    <string name="playlists_new_playlist_cancel">Cancel</string>
    <string name="playlists_new_playlist_msg_title_is_required">You need to specify a title for playlist</string>
    <string name="playlists_new_playlist_msg_playlist_saved">Playlist %s saved successfully.</string>
    <string name="playlists_item_total_songs">%d Song(s)</string>
    <string name="playlists_item_artists">Artist(s): %s</string>
    <string name="playlistS_msg_playlist_deleted">Playlist deleted.</string>
    <string name="playlists_no_artists_found">No artists found</string>
    <string name="playlist_songs_add_songs">Add Songs</string>
    <string name="playlist_songs">Playlist Songs</string>
    <string name="playlists_songs_not_found_empty_state">No songs found</string>
    <string name="select_amount_songs">%1$d selected</string>
    <string name="select_songs_msg_select_at_least_one_song">Select at least one song for your Playlist</string>
    <string name="playlist_songs_songs_added_success">Wow. The songs you added are sooooo good!</string>
    <string name="select_songs_empty_state">No song found, try finding a new one</string>
    <string name="playlists_see_albums">See Albums</string>
    <string name="delete_song_button">Button with trash icon used to delete song</string>
    <string name="song_deleted_successfully">Song %s deleted Successfully</string>
    <string name="failed_to_delete_song">Sorry, we could not delete the song %s, try again later.</string>
    <string name="no_title">No Title</string>
    <string name="no_artist">No Artist</string>
    <string name="start_car_mod">Start Car Mode</string>
    <string name="playlist_songs_song_deleted_message">Song deleted successfully</string>
    <string name="app_plays_audio">This App Plays Audio</string>
    <string name="empty"></string>
    <string name="finishing_importing_playlists">Almost done, importing all playlists</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="home_are_you_sure_about_deleting_song">You are about to delete the song %s from your device. You really want to proceed?</string>
    <string name="are_you_sure_about_delete_playlist">You are about to the delete the playlist %s. You really want to proceed?</string>
    <string name="import_has_finished">Import has finished</string>
    <string name="import_has_finished_message">You\'re all set! We finished importing all songs and playlists from the other device.</string>
    <string name="fragment_tuner_title">Tuner\n</string>
    <string name="importing_songs_has_finished">Yup! We finished importing all songs from the other device.</string>
    <string name="get_ready_to_listen_to_your_songs">You\'re songs are ready for you, we just finished importing every single one for you.</string>
    <string name="importing_playlists">Importing playlists...</string>
    <string name="importing_playlists_has_finished">You ready? All playlists were imported!</string>
    <string name="what_mood_are_you_in">What mood are you in? Come listen to one of your awesome playlists!</string>
    <string name="check_internet_connection">To use this feature you need internet connection. Check your (Wifi/4g).</string>
    <string name="invalid_device_id">The provided id is not valid. You need to copy the exact same value from another device.</string>
    <string name="failed_to_open_song">Ops... Something went wrong when opening the song.</string>
    <string name="lable_close">Close</string>
    <string name="download_has_failed">Something went wrong. Please, try again later.</string>
    <string name="label_retry">Retry</string>
    <string name="downloading_songs">Almost there! We are downloading the songs you requested...</string>
    <string name="no_songs_found_to_import">No new songs found to import :)</string>
    <string name="your_songs_are_being_imported">We find a few new songs, they\'re being import...</string>
    <string name="playlist_songs_import_finished">You\'re all set. We finished importing the new songs.</string>
    <string name="most_played">Most Played</string>
    <string name="times_played_label">%1$d plays</string>
    <string name="car_mode">Car Mode</string>
    <string name="recently_added">Recently Added</string>
    <string name="by_artist">By Artist</string>
    <string name="play_next">Play Next</string>
    <string name="lyrics">Lyrics</string>
    <string name="delete">Delete</string>
    <string name="added_on_label">Added On %s</string>
    <string name="no_songs_found">No Songs Found</string>
    <string name="something_went_wrong_while_executing_action">Something wait wrong while executing this action. Try again later.</string>
</resources>