<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

        <fragment android:id="@+id/loginFragment"
            android:name="br.com.listennow.ui.fragments.LoginFragment"
            android:label="@string/login"
            tools:layout="@layout/fragment_login" >
                <action
                    android:id="@+id/action_loginFragment_to_registerFragment"
                    app:destination="@id/registerFragment" />
                <action
                    android:id="@+id/action_loginFragment_to_homeFragment"
                    app:destination="@id/homeFragment" />
        </fragment>

        <fragment android:id="@+id/registerFragment"
            android:name="br.com.listennow.ui.fragments.RegisterFragment"
            android:label="@string/register"
            tools:layout="@layout/fragment_register" >
                <action
                    android:id="@+id/action_registerFragment_to_loginFragment"
                    app:destination="@id/loginFragment" />
        </fragment>

        <fragment android:id="@+id/homeFragment"
            android:name="br.com.listennow.ui.fragments.HomeFragment"
            android:label="@string/home"
            tools:layout="@layout/fragment_home">
                <action
                    android:id="@+id/action_homeFragment_to_profileFragment"
                    app:destination="@id/profileFragment" />
                <action
                    android:id="@+id/action_homeFragment_to_searchNewSongs"
                    app:destination="@id/searchNewSongs" />
        </fragment>

        <fragment android:id="@+id/profileFragment"
            android:name="br.com.listennow.ui.fragments.ProfileFragment"
            android:label="@string/profile"
            tools:layout="@layout/fragment_profile">
        </fragment>

        <fragment android:id="@+id/searchNewSongsFragment"
            android:name="br.com.listennow.ui.fragments.SearchYoutubeSongsFragment"
            android:label="@string/search_new_songs"
            tools:layout="@layout/fragment_search_youtube_songs">
        </fragment>
</navigation>