<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/empty_state_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/empty_results"
        app:layout_constraintBottom_toTopOf="@+id/empty_state_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:contentDescription="@string/cd_empty_state_people_looking_for_something" />

    <TextView
        android:id="@+id/empty_state_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_results_found_try_download_a_new_song"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/empty_state_action_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empty_state_image"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginVertical="10dp"
        android:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/empty_state_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_a_new_song"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empty_state_text"
        app:icon="@drawable/ic_search" />
</androidx.constraintlayout.widget.ConstraintLayout>