<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="newPlaylistViewModel"
            type="br.com.listennow.viewmodel.NewPlaylistViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/playlists_new_playlist_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlists_new_playlist"
            android:textColor="@color/background"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/playlists_new_playlist_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/playlists_new_playlist_screen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/background"
            app:hintTextColor="@color/background"
            android:textColorHint="@color/background">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/playlists_new_playlist_title"
                android:text="@={newPlaylistViewModel.playlist.title}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:id="@+id/playlists_new_playlist_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlists_new_playlist_cancel"
            app:layout_constraintTop_toBottomOf="@id/playlists_new_playlist_title"
            app:layout_constraintEnd_toStartOf="@id/playlists_new_playlist_save"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/background"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/playlists_new_playlist_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlists_new_playlist_save"
            app:layout_constraintTop_toBottomOf="@id/playlists_new_playlist_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/background"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
